[package]
name = "river-raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.9.3"
rand = "0.8.5"
crossbeam = {version="0.8.2", features=["crossbeam-channel"]}
bincode = "1.3.3"
serde = "1.0.162"
serde_derive = "1.0.162"
